# -*- coding: utf-8 -*-

"""
Classe abstraite Person, mère de USER
"""

from abc import ABC
from dataclasses import dataclass, field

@dataclass
class Person(ABC):
    """Personne liée à l'école : enseignant ou élève."""
    first_name: str
    last_name: str

    def __str__(self) -> str:
        return f"{self.first_name} {self.last_name}"
