@startuml
skinparam classAttributeIconSize 0

abstract class Person {
  - string first_name
  - string last_name
}

class User {
  - string street
  - string city
  - string postal_code
  - string email
  - string telephone_number
}

class Author {
  - string biography
}

class Member {
  - string professionnal_activity
  - string context
}

class Authenticate {
  - string login
  - string password
  - string authenticate_rights
}

class Book {
  - string book_title
  - string book_summary
  - string book_isbn
  - date publication_date
  - int numb_pages
  - float book_price
  - int minimal_age
}

class Publisher {
  - string publisher_name
}

class Character {
  - string character_name
  - string character_description
}

class Season {
  - string year
}

class Session {
  - int session_numb
  - date session_date
}

class Examination {
  - int numb_votes
  - string examination_status
}

class Literary_Prize {
  - string prize_name
  - date prize_date
}

class Cutelery {
  - date start
  - date stop
  - string fonction
  - boolean is_president
}


Person <|-- User 

User <|-- Author

Author <|-- Member

User "1" -- "1..*" Authenticate

Author "1" -- "0..*" Book : writes >

Book "1" -- "0..*" Character : contains >

Book "1" -- "0..*" Literary_Prize : wins >

Publisher "1" -- "0..*" Book : publishes >

Cutelery "1" -- "1..*" Member : brings >

Season "1" -- "1..*" Session : made of >

Session "1" -- "1..*" Examination : takes >

Book "1" -- "0..*" Examination : convinces>

Member "0..*" -- "1..*" Season : participes >

Member "0..*" -- "1..*" Author : are >

@enduml